--- a/options/train/RepSR/train_RepSR_x4.yml
+++ b/options/train/RepSR/train_RepSR_x4.yml
@@ -30,7 +30,7 @@ datasets:
     use_shuffle: true
     num_worker_per_gpu: 6
     batch_size_per_gpu: 8
-    dataset_enlarge_ratio: 100
+    dataset_enlarge_ratio: 10
     prefetch_mode: ~
 
   # val:
@@ -53,7 +53,7 @@ network_g:
   res_scale: 0.1
   img_range: 255.
   rgb_mean: [0.4488, 0.4371, 0.4040]
-  xt_flag: true
+  xt_flag: false
 
 # path
 path:
@@ -113,7 +113,7 @@ train:
 # logging settings
 logger:
   print_freq: 1000
-  save_checkpoint_freq: !!float 5e3
+  save_checkpoint_freq: !!float 1e4
   use_tb_logger: true
   wandb:
     project: ~
