--- a/options/deploy/RepSR/deploy_RepSR_x4_xt.yml
+++ b/options/deploy/RepSR/deploy_RepSR_x4_xt.yml
@@ -5,7 +5,7 @@ scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
 manual_seed: 10
 gray_mode: true
-convert_flag: true
+convert_flag: false
 
 datasets:
   test_1:  # the 1st test dataset
@@ -45,16 +45,15 @@ network_g:
   img_range: 255.
   rgb_mean: [0.4488, 0.4371, 0.4040]
   xt_flag: true
-  deploy_flag: false
+  deploy_flag: true
 
 # path
 path:
-  pretrain_network_g: experiments/RepSR_x4_f256b32_Real3w_xt/models/net_g_300000.pth
-  #pretrain_network_g: experiments/RepSR_x4_f256b32_Real3w_xt/reparam/repra.pth
-  reparameter_network_g: experiments/RepSR_x4_f256b32_Real3w_xt/reparam/
+  #pretrain_network_g: experiments/RepSR_x4_f256b32_Real3w_xt/models/net_g_30000.pth
+  pretrain_network_g: experiments/RepSR_x4_f256b32_Real3w_xt/reparam/net_g_30000_reparam.pth
   strict_load_g: false
   resume_state: ~
-  models: /data1/hukunlei/torch-code/BasicSR/RepSR
+  models: experiments/RepSR_x4_f256b32_Real3w_xt/reparam/
 
 # validation settings
 val:
