--- a/options/train/RepSR/train_RepSR_x4_xt.yml
+++ b/options/train/RepSR/train_RepSR_x4_xt.yml
@@ -4,6 +4,7 @@ model_type: SRModel
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
 manual_seed: 10
+convert_flag: false
 
 # dataset and data loader settings
 datasets:
