--- a/options/deploy/RepSR/deploy_RepSR_x4_three.yml
+++ b/options/deploy/RepSR/deploy_RepSR_x4_three.yml
@@ -5,7 +5,7 @@ scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
 manual_seed: 10
 gray_mode: true
-convert_flag: false
+convert_flag: true
 
 datasets:
   test_1:  # the 1st test dataset
@@ -34,8 +34,8 @@ network_g:
 
 # path
 path:
-  pretrain_network_g: experiments/RepSR_x4_f256b32_Real3w_three/models/net_g_300000.pth
-  #pretrain_network_g: experiments/RepSR_x4_f256b32_Real3w_three/reparam/net_g_300000_reparam.pth
+  pretrain_network_g: experiments/RepSR_x4_f256b32_Real3w_three/models/net_g_30000.pth
+  #pretrain_network_g: experiments/RepSR_x4_f256b32_Real3w_three/reparam/net_g_30000_reparam.pth
   strict_load_g: false
   resume_state: ~
   models: experiments/RepSR_x4_f256b32_Real3w_three/reparam/
