--- a/options/train/RepSR/train_RepSR_x4_three.yml
+++ b/options/train/RepSR/train_RepSR_x4_three.yml
@@ -55,7 +55,7 @@ network_g:
   img_range: 255.
   rgb_mean: [0.4488, 0.4371, 0.4040]
   xt_flag: false
-  three_flag: false
+  three_flag: true
 
 # path
 path:
@@ -77,7 +77,7 @@ train:
     milestones: [200000]
     gamma: 0.5
 
-  total_iter: 300000
+  total_iter: 1000000
   warmup_iter: -1  # no warm up
 
   # losses
