--- a/options/train/RepSR/train_RepSR_x4_xt.yml
+++ b/options/train/RepSR/train_RepSR_x4_xt.yml
@@ -1,5 +1,5 @@
 # general settings
-name: RepSR_x4_f256b32_Real3w_xt
+name: RepSR_x4_f256b32_Real3w_xt_big
 model_type: SRModel
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -47,9 +47,9 @@ network_g:
   type: RepSR
   num_in_ch: 1
   num_out_ch: 1
-  num_feat: 64
-  inside_feat: 256
-  num_block: 5
+  num_feat: 32
+  inside_feat: 64
+  num_block: 5 #small arch 3 and big for 5
   upscale: 4
   res_scale: 0.1
   img_range: 255.
@@ -76,7 +76,7 @@ train:
     milestones: [200000]
     gamma: 0.5
 
-  total_iter: 300000
+  total_iter: 1000000
   warmup_iter: -1  # no warm up
 
   # losses
@@ -114,7 +114,7 @@ train:
 # logging settings
 logger:
   print_freq: 1000
-  save_checkpoint_freq: !!float 1e4
+  save_checkpoint_freq: !!float 1e3
   use_tb_logger: true
   wandb:
     project: ~
