SOF/FRVSR/VESPCN tested

--- a/experiments_BD/VESPCN/001/test.yml
+++ b/experiments_BD/VESPCN/001/test.yml
@@ -12,27 +12,27 @@ dataset:
 
   test1:
     name: Vid4
-    gt_seq_dir: data/Vid4/GT
-    lr_seq_dir: data/Vid4/Gaussian4xLR
+    gt_seq_dir: ./data/Vid4/GT
+    lr_seq_dir: ./data/Vid4/Gaussian4xLR
     filter_file: ~
     num_workers: 4
     pin_memory: true
 
-  test2:
-    name: ToS3
-    gt_seq_dir: data/ToS3/GT
-    lr_seq_dir: data/ToS3/Gaussian4xLR
-    filter_file: ~
-    num_workers: 4
-    pin_memory: true
+  # test2:
+  #   name: ToS3
+  #   gt_seq_dir: data/ToS3/GT
+  #   lr_seq_dir: data/ToS3/Gaussian4xLR
+  #   filter_file: ~
+  #   num_workers: 4
+  #   pin_memory: true
 
-  test3:
-    name: Gvt72
-    gt_seq_dir: data/Gvt72/GT
-    lr_seq_dir: data/Gvt72/Gaussian4xLR
-    filter_file: ~
-    num_workers: 4
-    pin_memory: true
+  # test3:
+  #   name: Gvt72
+  #   gt_seq_dir: data/Gvt72/GT
+  #   lr_seq_dir: data/Gvt72/Gaussian4xLR
+  #   filter_file: ~
+  #   num_workers: 4
+  #   pin_memory: true
 
 # model configs
 model:
