--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 results
 data
 *pycache*
-
+experiments_BD/FRVSR/001/train/codes_backup/*
+experiments_BD/FRVSR/001/train/ckpt/*
+experiments_BD/FRVSR/002/train/codes_backup/*
+experiments_BD/FRVSR/002/train/ckpt/*
