--- a/experiments_BD/FRVSR/002/train.yml
+++ b/experiments_BD/FRVSR/002/train.yml
@@ -12,7 +12,7 @@ dataset:
 
   train:
     name: VimeoTecoGAN
-    seq_dir: ./data/VimeoTecoGAN/GT.lmdb
+    seq_dir: ./data/VimeoTecoGAN/GTFull.lmdb
     filter_file: ~
     data_type: rgb
     crop_size: 128
