--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ experiments_BD/FRVSR/001/train/codes_backup/*
 experiments_BD/FRVSR/001/train/ckpt/*
 experiments_BD/FRVSR/002/train/codes_backup/*
 experiments_BD/FRVSR/002/train/ckpt/*
+experiments_BD/REPVSR/001/train/codes_backup/*
+experiments_BD/REPVSR/001/train/ckpt/*
