--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ experiments_BD/FRVSR/002/train/codes_backup/*
 experiments_BD/FRVSR/002/train/ckpt/*
 experiments_BD/REPVSR/001/train/codes_backup/*
 experiments_BD/REPVSR/001/train/ckpt/*
+experiments_BD/REPVSR/001/test
