--- a/options/train/x2SR/train_X2SR_x2_newdata.yml
+++ b/options/train/x2SR/train_X2SR_x2_newdata.yml
@@ -1,7 +1,7 @@
 # general settings
-name: RepSR_x4_f256b32_Real3w_xt_deep
+name: X2SR_x2_worddatanew
 model_type: SRModel
-scale: 4
+scale: 2
 num_gpu: 1  # set num_gpu: 0 for cpu mode
 manual_seed: 10
 convert_flag: false
@@ -11,8 +11,8 @@ datasets:
   train:
     name: Real3w
     type: Real3wDataset
-    dataroot_gt: /data1/datasets/d_realsr_3w/HR/
-    dataroot_lq: /data1/datasets/d_realsr_3w/LR/
+    dataroot_gt: /data1/hukunlei/X1/x2_hs1_b_text/HR
+    dataroot_lq: /data1/hukunlei/X1/x2_hs1_b_text/LR
     # (for lmdb)
     # dataroot_gt: datasets/DIV2K/DIV2K_train_HR_sub.lmdb
     # dataroot_lq: datasets/DIV2K/DIV2K_train_LR_bicubic_X4_sub.lmdb
@@ -22,7 +22,7 @@ datasets:
       # (for lmdb)
       # type: lmdb
 
-    gt_size: 512  
+    gt_size: 256  
     patch_size: 128 #194 776 128/512 during training
     use_flip: true
     use_rot: false
@@ -44,24 +44,24 @@ datasets:
 
 # network structures
 network_g:
-  type: RepSR
+  type: X2SR
   num_in_ch: 1
   num_out_ch: 1
-  num_feat: 32
+  num_feat: 16
   inside_feat: 64
-  num_block: 15 #small arch 3 and big for 5
-  upscale: 4
+  num_block: 3
+  upscale: 2
   res_scale: 0.1
   img_range: 255.
   rgb_mean: [0.4488, 0.4371, 0.4040]
-  xt_flag: true
+  xt_flag: false
 
 # path
 path:
   pretrain_network_g:  #experiments/204_EDSR_Lx2_f256b32_DIV2K_300k_B16G1_wandb/models/net_g_300000.pth
   strict_load_g: false
   resume_state: ~
-  models: /data1/hukunlei/torch-code/BasicSR/RepSR
+  models: /data1/hukunlei/torch-code/BasicSR/X2SR
 
 # training settings
 train:
@@ -76,7 +76,7 @@ train:
     milestones: [200000]
     gamma: 0.5
 
-  total_iter: 3000000
+  total_iter: 300000
   warmup_iter: -1  # no warm up
 
   # losses
@@ -113,8 +113,8 @@ train:
 
 # logging settings
 logger:
-  print_freq: 1000
-  save_checkpoint_freq: !!float 1e5
+  print_freq: 100
+  save_checkpoint_freq: !!float 1e4
   use_tb_logger: true
   wandb:
     project: ~
