--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,67 @@
-lmdb
-numpy
-matplotlib
-opencv-python  # or opencv or opencv-contrib-python
-pyyaml
-scipy
-scikit-image
-tqdm # process bar
+absl-py==0.13.0
+addict==2.4.0
+backcall==0.2.0
+cachetools==4.2.2
+certifi==2021.10.8
+charset-normalizer==2.0.3
+cycler==0.10.0
+decorator==4.4.2
+future==0.18.2
+google-auth==1.33.1
+google-auth-oauthlib==0.4.4
+grpcio==1.39.0
+idna==3.2
+imageio==2.9.0
+importlib-metadata==4.6.1
+ipdb==0.13.9
+ipython==7.25.0
+ipython-genutils==0.2.0
+jedi==0.18.0
+kiwisolver==1.3.1
+lmdb==1.2.1
+Markdown==3.3.4
+matplotlib==3.4.2
+matplotlib-inline==0.1.2
+networkx==2.5.1
+numpy==1.21.1
+oauthlib==3.1.1
+opencv-python==4.5.3.56
+parso==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.3.1
+prompt-toolkit==3.0.19
+protobuf==3.17.3
+ptflops==0.6.6
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+Pygments==2.9.0
+pyparsing==2.4.7
+python-dateutil==2.8.2
+pytorch-msssim==0.2.1
+PyWavelets==1.1.1
+PyYAML==5.4.1
+requests==2.26.0
+requests-oauthlib==1.3.0
+rsa==4.7.2
+scikit-image==0.18.2
+scipy==1.7.0
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+tb-nightly==2.6.0a20210722
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorboardX @ file:///home/conda/feedstock_root/build_artifacts/tensorboardx_1628560643999/work
+tifffile==2021.7.2
+toml==0.10.2
+torch==1.5.0
+torchvision==0.6.0
+tqdm==4.61.2
+traitlets==5.0.5
+typing-extensions==3.10.0.0
+urllib3==1.26.6
+wcwidth==0.2.5
+Werkzeug==2.0.1
+yapf==0.31.0
+youtube-dl==2021.6.6
+zipp==3.5.0
